--- a/templates/pdf/requisition.html
+++ b/templates/pdf/requisition.html
@@ -131,7 +131,7 @@
 								</td>
 								<td class="devise">
 									<span>UNITE-TRAVAIL-PROGRES</span>
-                                    <img src="{% static './images/logo.png' %}" style="width: 80px;" />
+                                    <img src="{{img}}" style="width: 80px;" />
 								</td>
 							</tr>
 						</table>
