--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -16,17 +16,17 @@
       <div class="collapse navbar-collapse" id="navbarTop4">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item dropdown">
-            <a href="{% url 'home' module='1' %}" class="nav-link"
+            <a href="{% url 'home' module='7' %}" class="nav-link"
               >GESTION ADMIN.</a
             >
           </li>
           <li class="nav-item dropdown">
-            <a href="{% url 'home' module='2' %}" class="nav-link"
+            <a href="{% url 'home' module='5' %}" class="nav-link"
               >GESTION TECH.</a
             >
           </li>
           <li class="nav-item dropdown">
-            <a href="{% url 'home' module='3' %}" class="nav-link"
+            <a href="#" class="nav-link"
               >GESTION A.S.S.</a
             >
           </li>
