--- a/templates/requisition/show.html
+++ b/templates/requisition/show.html
@@ -7,9 +7,9 @@
 				<!--   SIDEBAR   -->
 				<ul class="list-group">
 					<a class="list-group-item active text-center" href="{% url 'home' module %}">
-						{% if module == 7 %}
+						{% if requisition.module == "7" %}
 							GESTION ADMIN.
-						{% elif module == 5 %}
+						{% elif module == "5" %}
 							GESTION TECH
 						{% elif module == 3 %}
 							GESTION A.S.S.
