handle error on update old_account

--- a/templates/requisition/email_notification.html
+++ b/templates/requisition/email_notification.html
@@ -3,9 +3,9 @@
 
 Bonjour Mr.
 
-Merci de cliquer sur le lien ci-dessous pour acceder à la requisition N°{{requisition.id}} 
-et finaliser l'autorisation de depense du montant de {{requisition.amount|intcomma}} XAF relatif à 
-{{requisition.label}}.
+La requisition N°{{requisition.id}} realative a l'autorisation de depense d'un montant
+de {{requisition.amount|intcomma}} XAF pour {{requisition.label}} est arrivée à votre niveau.
+Merci de cliquer sur le lien ci-dessous
 http://{{domain}}{% url 'show_requisition' requisition.id  %}
 
 Si vous pensez que ce n'est pas vous, merci d'ignorer cet email.
